# ronin

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  apply_jobs.sh  docker-compose.yml  main.py  prefect.yaml  publishing_stats.json  pyproject.toml  requirements.txt  run.sh  scrape.sh  test_slack_notification.py
.github/workflows/: blog_post_generator.yml  check-daily.yml  ci.yml  job_scraper.yml  job_scraper_proxy.yml  job_scraper_self_hosted.yml  job_scraper_tunnel.yml
app/: __init__.py
app/appliers/: __init__.py  base.py  factory.py  greenhouse.py  indeed.py  seek.py
app/core/: __init__.py  job.py  matcher.py  scheduler.py
app/scrapers/: base.py  (+5 more)
assets/: analysis_prompt.txt  cover_letter_example.txt  resume.txt
blocks/: airtable_service.py  github_service.py  prefect_blocks.py
config/: config.yaml
configs/: config.yaml
core/: __init__.py  config.py
dags/: airtable_companies.py  blog_generator_dag.py  consulate-check.py  job_application_dag.py  job_outreach_dag.py  job_search_dag.py
deployments/: deploy.py
flows/: blog_generator_dag.py  blog_generator_flow.py  job_application_dag.py  job_application_flow.py  job_outreach_dag.py  job_outreach_flow.py  job_search_dag.py  job_search_flow.py
integrations/: __init__.py  airtable.py  openai.py
scripts/: apply.sh  run.sh  run_centrelink_job_application.sh  run_job_search.sh  scrape.sh
services/: ai_service.py  airtable_service.py  github_service.py  mataroa_service.py  notification_service.py  outreach_generator.py  recruiter_service.py
tests/: publishing_stats.json
utils/: config.py
(+72 files in other folders)
